--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/amirahislam/burger.git"
+    "url": "git+https://github.com/amirahislam/burger"
   },
   "keywords": [],
   "author": "",
@@ -17,12 +17,13 @@
   "bugs": {
     "url": "https://github.com/amirahislam/burger/issues"
   },
-  "homepage": "https://github.com/amirahislam/burger#readme",
+  "homepage": "https://github.com/amirahislam/EatDaBurger#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mysql": "^2.15.0",
+    "package": "^1.0.1",
     "sequelize-heroku": "^2.0.0"
   },
   "devDependencies": {}
